Improve Plugin data layout
- Masonry pane improvements
- Wrote plugin Card ordering optimizer
- Collapsible plugin cards
- Table padding reduced 0.75 -> 0.7
- Table controls moved to use flex instead of float
- Table pagination control sizes adjusted
- Table sort icon display adjusted based on visible columns
- Table header font size adjusted based on visible columns
- Extension values get new ExtensionSection border around them
- Moved some DataTablesTable styles to modular style file
- Prepared progress bar utility for players with plugin data counting

Affects issues:
- Close #4864